fix layout of rating_buttons on mobile

--- a/webroot/assets/css/custom_item_classes.css
+++ b/webroot/assets/css/custom_item_classes.css
@@ -510,9 +510,14 @@ div.form-row.mc_vertical .btn-group > .btn-group:last-child > .btn:first-child {
 }
 
 /* special logic for rating_button  */
+div.form-row.mc_vertical.item-rating_button div.controls .controls-inner {
+  float: left;
+}
+
 div.form-row.mc_vertical.item-rating_button div.controls .controls-inner label.keep-label,
 div.form-row.mc_vertical.item-rating_button div.controls .controls-inner {
     text-align:center;
+    margin: 0 auto;
 }
 div.form-row.mc_vertical.item-rating_button div.controls  label.keep-label {
     display:block;
